@@ -1,1 +1,1 @@
-DIST squash_dir-12.6.tar.gz 28155 SHA256 9f62b96608b80cda2dec6ad9c5e09009bf68226e80cb4e402b616d8bb5011d80 SHA512 06908a60735aad93883050d06b8b2b2e9b0e1e43da2ab139b6664392f31da3318d48553e663245966d3bb0549153dbcd3ee51d03bcee132db99df19a22701330 WHIRLPOOL 102e678e5343bf71931cac3dd1bfcadaf904ff05c11bc032d59d1d9a179cf5ea53c10c5c7440c1bf9e428262aee42165a29ace0644ddeebdc1523fe86127dc8d
+DIST squash_dir-12.7.tar.gz 28635 SHA256 e474280ff869df25937b570d15e12eec9e741d4fd544c931fc8575d2c40d9f87 SHA512 24d37539fee58c3d60b247ebbbf80fd252c8de81922f4da72f752d9c6cb7f53cffa192a02a7e9bd4ab7477a5de58a717e92ba6fef298e51a39b25b0a25ac0e08 WHIRLPOOL 52f87bec562d16698571879c9c3fb9bd9c80793068cdce81237784d02c7328bb8a597f7507aff29dc6740a8dbe4251bea9cf7059c2a93395ad577f8a8ef7f1fe
