@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/squash_dir
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*squash_dir-12.7 (01 Jan 2013)
+
+  01 Jan 2013; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Support new /etc/conf.d/squash_dir
 
 *squash_dir-12.6 (19 Dec 2012)
 
